--- a/C968-Project/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/C968-Project/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,16 +46,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="inventory.cs" />
+    <Compile Include="inventoryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="inventoryForm.Designer.cs">
+      <DependentUpon>inventoryForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="part.cs" />
+    <Compile Include="productForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="productForm.Designer.cs">
+      <DependentUpon>productForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="products.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="partsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="partsForm.Designer.cs">
+      <DependentUpon>partsForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="inventoryForm.resx">
+      <DependentUpon>inventoryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="productForm.resx">
+      <DependentUpon>productForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +84,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="partsForm.resx">
+      <DependentUpon>partsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
